style.scss - Remove height from ng-select-sm
Lookup Editor
- Added new multilookup type for additional data
- Fix reset entry list when load another lookup

Form
- Force update lookup list when add option
- Fix code to set lookup when added as new option

Lookup
- Add new additional data type : multiplelookup
- Change editLookupEntryData to use normal object isntead of signal

Screen
- Fix add button for list screen
- Fix code to set prevId

--- a/src/app/design/editor/lookup-editor/lookup-editor.component.html
+++ b/src/app/design/editor/lookup-editor/lookup-editor.component.html
@@ -243,18 +243,24 @@
                                         <td>
                                           @if (['longtext','text','options'].indexOf(mapDataFields[o.key])>-1) {
                                             <span [innerHtml]="o.value"></span>
-                                          }
-                                          @if (mapDataFields[o.key]=='lookup') {
+                                          }@else if (mapDataFields[o.key]=='lookup') {
                                             <span>{{o.value?.name}}</span>
-                                          }
-                                          @if (mapDataFields[o.key]=='number') {
+                                          }@else if (mapDataFields[o.key]=='multiplelookup') {
+                                            @if (o.value && o.value.length>0) {
+                                              <div class="list-group list-group-sm small">                                            
+                                                @for(v of o.value; track $index) {
+                                                  <div class="list-group-item p-1 px-2">{{v.name}}</div>
+                                                }
+                                              </div>
+                                            }
+                                          }@else if (mapDataFields[o.key]=='number') {
                                             <span>{{o.value}}</span>
-                                          }
-                                          @if (mapDataFields[o.key]=='date') {
+                                          }@else if (mapDataFields[o.key]=='date') {
                                             <span>{{o.value|date:'medium'}}</span>
-                                          }
-                                          @if (mapDataFields[o.key]=='file') {
+                                          }@else if (mapDataFields[o.key]=='file') {
                                             <span><a [href]="getUrl('/entry/file/',o.value)">{{o.value}}</a></span>
+                                          }@else {
+                                            <span>{{o.value}}</span>
                                           }
                                         </td>
                                       </tr>
