--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1011,7 +1011,7 @@ ngb-pagination ul.pagination{
 
 .ng-select.ng-select-sm .ng-select-container {
   min-height: 32px;
-  height: 32px;
+  // height: 32px;
   font-size:0.875rem;
 }
 
