--- a/src/app/run/lookup/lookup.component.html
+++ b/src/app/run/lookup/lookup.component.html
@@ -119,18 +119,24 @@
                                       <td>
                                         @if (['longtext','text','options'].indexOf(mapDataFields()[o.key])>-1) {
                                           <span [innerHtml]="o.value"></span>
-                                        }
-                                        @if (mapDataFields()[o.key]=='lookup') {
+                                        }@else if (mapDataFields()[o.key]=='lookup') {
                                           <span>{{o.value?.name}}</span>
-                                        }
-                                        @if (mapDataFields()[o.key]=='number') {
+                                        }@else if (mapDataFields()[o.key]=='multiplelookup') {
+                                          @if (o.value && o.value.length>0) {
+                                              <div class="list-group list-group-sm small">                                            
+                                                @for(v of o.value; track $index) {
+                                                  <div class="list-group-item p-1 px-2">{{v.name}}</div>
+                                                }
+                                              </div>
+                                            }
+                                        }@else if (mapDataFields()[o.key]=='number') {
                                           <span>{{o.value}}</span>
-                                        }
-                                        @if (mapDataFields()[o.key]=='date') {
+                                        }@else if (mapDataFields()[o.key]=='date') {
                                           <span>{{o.value|date:'medium'}}</span>
-                                        }
-                                        @if (mapDataFields()[o.key]=='file') {
+                                        }@else if (mapDataFields()[o.key]=='file') {
                                           <span><a [href]="getUrl('/entry/file/',o.value)">{{o.value}}</a></span>
+                                        }@else {
+                                          <span>{{o.value}}</span>
                                         }
                                       </td>
                                     </tr>
@@ -281,7 +287,7 @@
           <div class="form-group mb-3">
             <label class="form-label">{{lookup()?.x?.codeLbl||'Code'}} *</label>
             <input type="text" class="form-control" name="code" #code="ngModel"
-              [(ngModel)]="editLookupEntryData().code" required />
+              [(ngModel)]="_lookupEntry.code" required />
             @if (code?.invalid) {
               <small class="form-text has-warning">
                 @if (code.errors?.required) {
@@ -294,7 +300,7 @@
         <div class="form-group mb-3">
           <label class="form-label">{{lookup()?.x?.nameLbl||'Name'}} *</label>
           <input type="text" class="form-control" name="name" #name="ngModel"
-            [(ngModel)]="editLookupEntryData().name" required />
+            [(ngModel)]="_lookupEntry.name" required />
           @if (name?.invalid) {
             <small class="form-text has-warning">
               @if (name.errors?.required) {
@@ -307,7 +313,7 @@
           <div class="form-group mb-3">
             <label class="form-label">{{lookup()?.x?.extraLbl||'Extra'}}</label>
             <input type="text" class="form-control" name="extra" #extra="ngModel"
-              [(ngModel)]="editLookupEntryData().extra" />
+              [(ngModel)]="_lookupEntry.extra" />
             @if (extra?.invalid) {
               <small class="form-text has-warning">
                 @if (extra.errors?.required) {
@@ -317,7 +323,11 @@
             }
           </div>
         }
-        @if (lookup().dataEnabled) {
+
+
+
+
+        <!-- @if (lookup().dataEnabled) {
           <div class="form-group mb-3">
             <label class="form-label small text-muted fw-bold">Data (Additional attributes)</label>
             <table width="100%">
@@ -330,55 +340,62 @@
                     @if (e.type=='text') {
                       <input class="form-control form-control-sm" style="width:100%" type="text"
                         name="value_{{$index}}"
-                        [(ngModel)]="editLookupEntryData().data[e.key]">
-                    }
-                    @if (e.type=='longtext') {
+                        [(ngModel)]="_lookupEntry.data[e.key]">
+                    }@else if (e.type=='longtext') {
                       <textarea class="form-control form-control-sm" style="width:100%"
                         name="value_{{$index}}"
-                      [(ngModel)]="editLookupEntryData().data[e.key]"></textarea>
-                    }
-                    @if (e.type=='number') {
+                      [(ngModel)]="_lookupEntry.data[e.key]"></textarea>
+                    }@else if (e.type=='number') {
                       <input class="form-control form-control-sm" style="width:100%" type="number"
                         name="value_{{$index}}"
-                        [(ngModel)]="editLookupEntryData().data[e.key]">
-                    }
-                    @if (e.type=='date') {
+                        [(ngModel)]="_lookupEntry.data[e.key]">
+                    }@else if (e.type=='date') {
                       <input class="form-control form-control-sm" style="width:100%" type="text"
                         name="value_{{$index}}"
-                        [(ngModel)]="editLookupEntryData().data[e.key]" (click)="d2.toggle()" ngbDatepicker
+                        [(ngModel)]="_lookupEntry.data[e.key]" (click)="d2.toggle()" ngbDatepicker
                         #d2="ngbDatepicker">
-                    }
-                    @if (e.type=='options') {
+                    }@else if (e.type=='options') {
                       <select class="form-control form-control-sm" style="width:100%" name="value_{{$index}}"
-                        [(ngModel)]="editLookupEntryData().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                         @for (a of e.opts; track $index) {
                           <option [ngValue]="a">{{a}}</option>
                         }
                       </select>
-                    }
-                    @if (e.type=='lookup') {
+                    }@else if (e.type=='lookup') {
                       <select class="form-control form-control-sm" style="width:100%" name="value_{{$index}}"
                         [compareWith]="compareByCodeFn"
-                        [(ngModel)]="editLookupEntryData().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                         @for (a of lookupListMap()[e.opts]; track $index) {
                           <option [ngValue]="a">{{a.name}}</option>
                         }
                       </select>
-                    }
-                    @if (e.type=='file') {
+                    }@else if (e.type=='multiplelookup') {
+                      <select class="form-control form-control-sm" style="width:100%" name="value_{{$index}}"
+                        [compareWith]="compareByCodeFn"
+                        [multiple]="true"
+                        [(ngModel)]="_lookupEntry.data[e.key]">
+                        @for (a of lookupListMap()[e.opts]; track $index) {
+                          <option [ngValue]="a">{{a.name}}</option>
+                        }
+                      </select>
+                    }@else if (e.type=='file') {
                       <label style="width:100%">
-                        <input type="file" [hidden]="true" (change)="uploadFile($event, editLookupEntryData().data, e.key)"
+                        <input type="file" [hidden]="true" (change)="uploadFile($event, _lookupEntry.data, e.key)"
                           name="file" />
                         <div class="form-control form-control-sm" style="background: white">
                           <fa-icon [icon]="['fas','upload']"></fa-icon>
-                          {{editLookupEntryData().data[e.key]||'Browse'}}
+                          {{_lookupEntry.data[e.key]||'Browse'}}
                         </div>
                       </label>
+                    }@else {
+                      <input class="form-control form-control-sm" style="width:100%" type="text"
+                        name="value_{{$index}}"
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                     }
                   </td>
                   <td style="width:30px;vertical-align:top">
                     <button type="button" class="btn btn-sm btn-light"
-                      (click)="deleteDataRow(editLookupEntryData().data, e.key)">
+                      (click)="deleteDataRow(_lookupEntry.data, e.key)">
                       <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
                     </button>
                   </td>
@@ -390,20 +407,20 @@
                     {{e.key}} (orphan)
                   </td>
                   <td>
-                    @if (!isNumber(editLookupEntryData().data[e.key])) {
+                    @if (!isNumber(_lookupEntry.data[e.key])) {
                     <input class="form-control form-control-sm" style="width:100%" type="text"
                       name="valueorph_{{$index}}"
-                      [(ngModel)]="editLookupEntryData().data[e.key]">
+                      [(ngModel)]="_lookupEntry.data[e.key]">
                     }
-                    @if (isNumber(editLookupEntryData().data[e.key])) {
+                    @if (isNumber(_lookupEntry.data[e.key])) {
                       <input class="form-control form-control-sm" style="width:100%" type="number"
                         name="valueorph_{{$index}}"
-                        [(ngModel)]="editLookupEntryData().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                     }
                   </td>
                   <td>
                     <button type="button" class="btn btn-sm btn-light"
-                      (click)="deleteDataRow(editLookupEntryData().data, e.key)">
+                      (click)="deleteDataRow(_lookupEntry.data, e.key)">
                       <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
                     </button>
                   </td>
@@ -411,12 +428,113 @@
               }
             </table>
           </div>
+        } -->
+
+
+        @if (lookup().dataEnabled) {
+          <div class="mb-3">
+            <div class="text-muted small fw-bold text-center add-data-split mx-n3">
+              <span class="bg-white" style="display: inline-block;z-index: 1;position: relative;padding: 5px;">
+                Data (additional attributes)</span>
+            </div>
+              @for (e of lookupEntryFields; track $index) {
+                <div class="form-group mb-3">
+                  <label class="form-label">{{e.key}}</label>
+                  <div class="input-group">
+                    @if (e.type=='text') {
+                      <input class="form-control form-control-sm" type="text"
+                        name="value_{{$index}}"
+                        [(ngModel)]="_lookupEntry.data[e.key]">
+                    }@else if (e.type=='longtext') {
+                      <textarea class="form-control form-control-sm"
+                        name="value_{{$index}}"
+                      [(ngModel)]="_lookupEntry.data[e.key]"></textarea>
+                    }@else if (e.type=='number') {
+                      <input class="form-control form-control-sm" type="number"
+                        name="value_{{$index}}"
+                        [(ngModel)]="_lookupEntry.data[e.key]">
+                    }@else if (e.type=='date') {
+                      <input class="form-control form-control-sm" type="text"
+                        name="value_{{$index}}"
+                        [(ngModel)]="_lookupEntry.data[e.key]" (click)="d2.toggle()" ngbDatepicker
+                        #d2="ngbDatepicker">
+                    }@else if (e.type=='options') {
+                      <select class="form-control form-control-sm" name="value_{{$index}}"
+                        [(ngModel)]="_lookupEntry.data[e.key]">
+                        @for (a of e.opts; track $index) {
+                          <option [ngValue]="a">{{a}}</option>
+                        }
+                      </select>
+                    }@else if (e.type=='lookup') {
+                      <ng-select style="width:100%" class="ng-select-sm" [items]="lookupListMap[e.opts]" 
+                        [virtualScroll]="true" 
+                        bindLabel="name" placeholder="No value" [(ngModel)]="_lookupEntry.data[e.key]"
+                        name="value_{{$index}}">
+                      </ng-select>
+                    }@else if (e.type=='multiplelookup') {
+                      <ng-select style="width:100%" class="ng-select-sm" [items]="lookupListMap[e.opts]" 
+                        [virtualScroll]="true" 
+                        [multiple]="true"
+                        bindLabel="name" placeholder="No value" [(ngModel)]="_lookupEntry.data[e.key]"
+                        name="value_{{$index}}">
+                      </ng-select>
+                    }@else if (e.type=='file') {
+                      <label class="flex-grow-1">
+                        <input type="file" [hidden]="true" (change)="uploadFile($event, _lookupEntry.data, e.key)"
+                          name="file" />
+                        <div class="form-control form-control-sm" style="background: white">
+                          <fa-icon [icon]="['fas','upload']"></fa-icon>
+                          {{_lookupEntry.data[e.key]||'Browse'}}
+                        </div>
+                      </label>
+                    }@else{
+                      <input class="form-control form-control-sm" type="text"
+                        name="value_{{$index}}"
+                        [(ngModel)]="_lookupEntry.data[e.key]">
+                    }
+
+                    @if (e.type!='lookup'&&e.type!='multiplelookup'){
+                      <button type="button" style="--bs-btn-border-color:#ddd" class="btn btn-sm btn-outline-secondary border-start-0"
+                        (click)="deleteDataRow(_lookupEntry.data, e.key)">
+                        <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
+                      </button>
+                    }
+                   </div>
+                </div>
+              }
+              @for (e of lookupEntryFieldsOrphan|keyvalue; track $index) {
+                <div class="form-group mb-3">
+                  <label class="form-label">{{e.key}} (orphan)</label>
+
+                  <div class="input-group">
+                    @if (!isNumber(_lookupEntry.data[e.key])) {
+                      <input class="form-control form-control-sm" style="width:100%" type="text"
+                        name="valueorph_{{$index}}"
+                        [(ngModel)]="_lookupEntry.data[e.key]">
+                    }
+                    @if (isNumber(_lookupEntry.data[e.key])) {
+                      <input class="form-control form-control-sm" style="width:100%" type="number"
+                        name="valueorph_{{$index}}"
+                        [(ngModel)]="_lookupEntry.data[e.key]">
+                    }
+
+                    <button type="button" class="btn btn-sm btn-light"
+                      (click)="deleteDataRow(_lookupEntry.data, e.key)">
+                      <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
+                    </button>
+                  </div>
+                </div>
+              }
+          </div>
         }
+
+
+
         <div class="form-group mb-3">
           <div class="form-check form-switch mt-1">
             <input type="checkbox" class="form-check-input"
-              (change)="editLookupEntryData().enabled = $event.target.checked ? 1: 0"
-              [(ngModel)]="editLookupEntryData().enabled" name="enabled"
+              (change)="_lookupEntry.enabled = $event.target.checked ? 1: 0"
+              [(ngModel)]="_lookupEntry.enabled" name="enabled"
               id="enabled">
               <label class="form-check-label" for="enabled">Enabled</label>
           </div>
@@ -426,7 +544,7 @@
     <div class="modal-footer justify-content-between">
       <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" [disabled]="editLookupEntryForm.invalid"
-        (click)="c(editLookupEntryData())">
+        (click)="c(_lookupEntry)">
         <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
         Save Lookup
       </button>
