--- a/src/app/design/editor/ui-editor/dashboard-editor/dashboard-editor.component.html
+++ b/src/app/design/editor/ui-editor/dashboard-editor/dashboard-editor.component.html
@@ -74,7 +74,7 @@
                         </div>
                       }
                       <div class="element-item">
-                        <h6 class="card-title">{{e.title}}</h6>
+                        <h6 class="card-title">{{e.title}} <sup>{{e.id}}</sup></h6>
                         @if (e.description) {
                           <p class="card-subtitle">
                           {{e.description}}</p>
