include checkboxOption in txtcls condition

--- a/src/app/design/editor/ui-editor/form-editor/form-editor.component.html
+++ b/src/app/design/editor/ui-editor/form-editor/form-editor.component.html
@@ -2708,7 +2708,7 @@
                   </select>
                 </div>
               }
-              @if (['select','radio', 'simpleOption' ].indexOf(editItemData.type)>-1) {
+              @if (['select','radio', 'simpleOption','checkboxOption' ].indexOf(editItemData.type)>-1) {
                 <div class="form-group mb-3">
                   <label class="form-label">Smart Form (classified from text)</label>
                   <select class="form-select" name="txtcls"
