--- a/src/app/_shared/component/entry-filter/entry-filter.component.html
+++ b/src/app/_shared/component/entry-filter/entry-filter.component.html
@@ -1,5 +1,6 @@
 <input type="text" class="w-100 form-control my-2" [(ngModel)]="filterField" name="filterField"
   placeholder="Type to filter fields">
+  <!-- {{formHolder().value}} -->
 @for (fm of ['data','prev']; track fm) {
   @if (formHolder()[fm]) {
     <div class="form-group mb-3">
