Angular upgrade to 20.2 CLI Analytics - false
DEVIREKA allow login from other provider other than UNIMAS

Group Editor
- Check for user.provider before get icon (prevent null)

Login
- Improve error message

View, UI Editor
- Try OnDestroy to prevent memory leak

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,9 +3,12 @@
   <div class="d-flex flex-column wrapper-in">
     @if (error) {
       <div class="text-danger text-center my-3">
-        {{error.error}} {{error.message}}
+        {{error.error}} 
+        @if (error.message){
+          - {{error.message}}
+        }
         @if (useEmail) {
-          <div>Forgot password? <button type="button" class="p-0 px-1 btn-outline-secondary btn btn-sm"
+          <div class="mt-2">Forgot password? <button type="button" class="p-0 px-1 btn-outline-secondary btn btn-sm"
           (click)="reset(cred.email)">Reset Password</button></div>
         }
       </div>
